# clang-rename

./: .clang-format  CMakeLists.txt  ChangeIncludePrefix.cpp  ClangRename.cpp  RenameMacro.cpp  RenameNamespace.cpp  Transform.cpp  Transform.hpp  helper.hpp
